--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1739,6 +1739,7 @@ h1, h2, h3, h4 {
   align-items: center;
   grid-template-columns: repeat(auto-fit, minmax(340px, 1fr));
   grid-auto-rows: 1fr;
+  margin-bottom: 10px;
   width: 90%;
   max-width: 100%;
   margin: auto;
@@ -1747,10 +1748,9 @@ h1, h2, h3, h4 {
 }
 .card {
   height: -webkit-fill-available;
-  width: 90%;
+  width: 95%;
   margin: auto;
   border-radius: 16px;
-  box-shadow: 0 30px 30px -25px rgba(65, 51, 183, 0.25);
 }
 
 .information {
@@ -1786,19 +1786,20 @@ h1, h2, h3, h4 {
 .information .info + * {
   margin-top: 1.25rem;
 }
+
 .information .button {
   font: inherit;
   line-height: 1;
   background-color: var(--c-white);
   border: 2px solid var(--c-indigo);
   color: var(--c-indigo);
-  padding: 0.5em 1em;
+  padding: 0.5em 0.9em;
   border-radius: 6px;
   font-weight: 500;
   display: inline-flex;
   align-items: center;
   justify-content: space-between;
-  gap: 0.5rem;
+  gap: 0.3;
   width: fit-content;
   margin-top: auto;
 }
@@ -1807,8 +1808,8 @@ h1, h2, h3, h4 {
   color: var(--c-white);
 }
 .information .details {
-  display: flex;
   gap: 1rem;
+  width: fit-content;
 }
 .information .details div {
   padding: 0.75em 1em;
@@ -1820,13 +1821,13 @@ h1, h2, h3, h4 {
   flex-basis: 50%;
 }
 .information .details dt {
-  font-size: 0.875rem;
-  color: var(--c-cold-purple);
+  font-size: 0.775rem;
+  color: var(--c-indigo);
 }
 .information .details dd {
   color: var(--c-indigo);
   font-weight: 600;
-  font-size: 1.25rem;
+  font-size: 1.15rem;
 }
 
 .plan {
@@ -1953,4 +1954,10 @@ h1, h2, h3, h4 {
   vertical-align: middle;
   border-style: none;
   width: 100px !important;
+}
+
+.flexboxx{
+  display: flex;
+  justify-content: space-between;
+  margin-top: auto;
 }
